fix notif invisible si on scroll

--- a/frontend/static/css/bell.css
+++ b/frontend/static/css/bell.css
@@ -3,7 +3,7 @@
     height: 30px;
     position: absolute; /*Nice craft ahahah*/
     right: 8em;
-    top: 0em;
+    top: -0.25em;
 }
 
 .icon-wrapper:not([data-number="0"])::after{
